<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAbt">

    <ImageView
        android:id="@+id/imageZakat"
        android:layout_width="92dp"
        android:layout_height="81dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dip"
        app:srcCompat="@mipmap/ic_launcher"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageZakat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dip"
        android:text="AppZakat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageZakat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dip"
        android:text="@string/about_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/about_app" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dip"
        android:text="@string/about_zkt" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="30dip"
        android:text="@string/more_info" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:autoLink="all"
        android:clickable="true"
        android:text="https://www.islamic-relief.org/zakat/" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dip"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="30dip"
        android:text="@string/link_code" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginTop="4dp"
        android:autoLink="all"
        android:clickable="true"
        android:text="https://github.com/NurulAnis99/ZakatApplication " />
</RelativeLayout>